@@ -2,6 +2,10 @@ SUBDIRS = .
 
 include $(top_srcdir)/includes/directories.inc
 
-resources_DATA = \
+RESOURCES = \
     example.txt
 
+dist_resources_DATA = \
+    $(RESOURCES)
+
+all:
